--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">Botlhale Mpatlanyane</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Bo-tlhale/weather-app-project" target="_blank"> on GitHub</a> and
+          <a href="https://app.netlify.com/sites/official-weather-app/overview" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
