--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Botlhale Mpatlanyane</a> and is
+          <a href="https://github.com/Bo-tlhale" target="_blank">Botlhale Mpatlanyane</a> and is
           <a href="https://github.com/Bo-tlhale/weather-app-project" target="_blank"> on GitHub</a> and
           <a href="https://app.netlify.com/sites/official-weather-app/overview" target="_blank">hosted on Netlify</a>
         </p>
