--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
       <main>
         <div class="current-weather">
           <div>
-            <h1 class="current-city" id="current-city">Paris</h1>
+            <h1 class="current-city" id="current-city"></h1>
             <p class="current-details">
               <span id="current-date"></span>,
-              <span id="description">moderate rain </span><br />
-              Humidity: <strong id="humidity">87%</strong>, Wind:
-              <strong id="wind_speed">7.2km/h</strong>
+              <span id="description"></span><br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind_speed"></strong>
             </p>
           </div>
           <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span
-            ><span class="current-temperature-value">24</span
+            <span class="current-temperature-icon"></span
+            ><span class="current-temperature-value"></span
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
