--- a/index.html
+++ b/index.html
@@ -45,6 +45,38 @@
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
+        <div class="weather-forecast" id="forecast">
+          <!--<div class="forecast-day">
+          <div class="forecast-date">Tue</div>
+          <div class="forecast-icon"></div>
+          <div class="forecast-temp">15° 19°</div>
+          </div>
+          <div class="forecast-day">
+            <div class="forecast-date">Wed</div>
+            <div class="forecast-icon"></div>
+            <div class="forecast-temp">15° 19°</div>
+          </div>
+          <div class="forecast-day">
+            <div class="forecast-date">Thur</div>
+            <div class="forecast-icon"></div>
+            <div class="forecast-temp">15° 19°</div>
+          </div>
+          <div class="forecast-day">
+            <div class="forecast-date">Fri</div>
+            <div class="forecast-icon"></div>
+            <div class="forecast-temp">15° 19°</div>
+          </div>
+          <div class="forecast-day">
+            <div class="forecast-date">Sat</div>
+            <div class="forecast-icon"></div>
+            <div class="forecast-temp">15° 19°</div>
+          </div>
+          <div class="forecast-day">
+            <div class="forecast-date">Sun</div>
+            <div class="forecast-icon"></div>
+            <div class="forecast-temp">15° 19°</div>
+          </div>-->
+        </div>
       </main>
       <footer>
         <p>
